--- a/doc/business_data_manipulation.Rmd
+++ b/doc/business_data_manipulation.Rmd
@@ -38,8 +38,7 @@ licence_app = lic %>% mutate(business_type = ifelse(grepl("Cafe", `License Categ
   select(ID, name = `Business Name`, end_date = `End Date`, business_type, license_cate = `License Category`, zip = Zip) %>%
   drop_na()
 str(licence_app)
-
-head(licence_app)
+head(licence_app, 10)
 ```
 
 
@@ -56,7 +55,6 @@ legal_business = legal_b %>% mutate(business_type = ifelse(grepl("Cafe", `Indust
   select(ID, name = `Business Name`, status = `License Status`, expiration = `License Expiration Date`, business_type, licence_cate = Industry, borough = `Borough Code`, zip = `Address ZIP`) %>%
   drop_na()
 str(legal_business)
-
 date = legal_business %>% filter(status == "Active") %>% mutate(expiration = mdy(expiration)) %>% select(expiration)
 summary(date)
 head(legal_business)
@@ -64,7 +62,8 @@ head(legal_business)
 
 ```{r}
 business_data = left_join(legal_business, licence_app) %>% distinct(ID, .keep_all = TRUE)
-head(business_data, 10)
+head(business_data, 20)
+business_data
 ```
 
 ```{r}
@@ -74,4 +73,3 @@ business_data %>% count(name,sort = TRUE)
 ```{r}
 business_data %>% filter(name == "7 ELEVEN INC") %>% count(business_type)
 ```
-
